added administrator layout

--- a/app/views/layouts/administrator/admin.html.haml
+++ b/app/views/layouts/administrator/admin.html.haml
@@ -19,7 +19,7 @@
 
     %header
       - logo = image_tag("logo.png", :alt => "Sample App", :class => "round")
-      = link_to logo, administrator_path
+      = link_to logo, administrator_admin_index_path
 
 
     %section.round
