--- a/public/stylesheets/administrator.css
+++ b/public/stylesheets/administrator.css
@@ -15,4 +15,18 @@ footer {
 
 .rigth-align{float: right; margin-right: 5px}
 
+#flash_notice, #flash_error, #flash_alert {
+  padding: 5px 8px;
+  margin: 10px 0;
+}
+
+#flash_notice {
+  background-color: #CFC;
+  border: solid 1px #6C6;
+}
+
+#flash_error, #flash_alert {
+  background-color: #FCC;
+  border: solid 1px #C66;
+}
 
