--- a/app/views/layouts/administrator/admin.html.haml
+++ b/app/views/layouts/administrator/admin.html.haml
@@ -23,7 +23,7 @@
       .container
         .column.span-20.prepend-10
           - logo = image_tag("logo.png", :alt => "Sample App", :class => "round")
-          = link_to logo, administrator_adminstrators_path
+          = link_to logo, administrator_admins_path()
         .clear
 
     %section.round
