added admin site -- first version working

--- a/public/stylesheets/administrator.css
+++ b/public/stylesheets/administrator.css
@@ -9,12 +9,17 @@ footer {
   bottom: -1px;
 }
 
+/***************  Font  *************/
 .gray{color: gray;}
 
 .small-text-gray{color:#999; font-size:11px;}
 
+
+/***************  Align  *************/
 .rigth-align{float: right; margin-right: 5px}
 
+
+/***************  Flash  *************/
 #flash_notice, #flash_error, #flash_alert {
   padding: 5px 8px;
   margin: 10px 0;
@@ -29,4 +34,38 @@ footer {
   background-color: #FCC;
   border: solid 1px #C66;
 }
+
+
+/***************  Error Form  *************/
+/*.fieldWithErrors {*/
+/*  display: inline;*/
+/*}*/
+
+/*.error_messages {*/
+/*  width: 400px;*/
+/*  border: 2px solid #CF0000;*/
+/*  padding: 0px;*/
+/*  padding-bottom: 12px;*/
+/*  margin-bottom: 20px;*/
+/*  background-color: #f0f0f0;*/
+/*  font-size: 12px;*/
+/*}*/
+
+/*.error_messages h2 {*/
+/*  text-align: left;*/
+/*  font-weight: bold;*/
+/*  padding: 5px 10px;*/
+/*  font-size: 12px;*/
+/*  margin: 0;*/
+/*  background-color: #c00;*/
+/*  color: #fff;*/
+/*}*/
+
+/*.error_messages p {*/
+/*  margin: 8px 10px;*/
+/*}*/
+
+/*.error_messages ul {*/
+/*  margin: 0;*/
+/*}*/
 
