--- a/app/views/administrator/admins/new.html.haml
+++ b/app/views/administrator/admins/new.html.haml
@@ -6,8 +6,14 @@
   .clear
 
   .column.span-20.prepend-8
-    = form_for @admin, :url => new_administrator_admin_path() do |f|
-      =# f.error_messages
+    = form_for @admin, :url => administrator_admins_path() do |f|
+      - if @admin.errors.any?
+        .error_messages
+          %h2
+            Form is invalid
+          %ul
+            - for message in @admin.errors.full_messages
+              %li= message
 
       .column.span-2
         = f.label :email
